--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Leighton Shank",
   "license": "MIT",
   "dependencies": {
+    "blessed": "^0.1.7",
     "cheerio": "^0.19.0",
     "colors": "^1.1.2",
     "html-entities": "^1.1.2",
