--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "cheerio": "^0.19.0",
     "colors": "^1.1.2",
     "html-entities": "^1.1.2",
+    "minimist": "^1.1.1",
     "moment": "^2.10.3",
     "request": "^2.58.0",
     "striptags": "^2.0.2"
+  },
+  "devDependencies": {
+    "debug": "^2.2.0"
   }
 }
