--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^0.19.0",
     "colors": "^1.1.2",
     "html-entities": "^1.1.2",
+    "keypress": "^0.2.1",
     "minimist": "^1.1.1",
     "moment": "^2.10.3",
     "request": "^2.58.0",
